# OS_

./: .gitignore  README.md
Kollok1/: README.md  answers.md
Kollok1/src/: CMakeLists.txt  factorials.cpp  factorials.h  list_reverse.cpp  list_reverse.h  test_main.cpp  unique_elements.cpp  unique_elements.h
Kollok2/: README.md  singletone.cpp
Kollok3/: answers.md
Laba1/: CMakeLists.txt
Laba1/src/: Creator.cpp  Employee.h  Reporter.cpp  main.cpp
Laba2/: CMakeLists.txt  main.cpp
Laba2/src/: CriticalSectionGuard.h  data.h  functions.cpp
Laba2/tests/: test.cpp
Laba2_98/: CMakeLists.txt
Laba2_98/src/: CriticalSectionGuard.h  data.h  functions.cpp  functions.h
Laba2_98/tests/: test.cpp
Laba3/: CMakeLists.txt  ThreadController.h  main.cpp
Laba3_98/: Data.h  ThreadController.cpp  ThreadController.h
Laba3_98/tests/: test_data.cpp
Laba4/: CMakeLists.txt  MyProcess.h  Receiver.cpp  RingBuffer.cpp
Laba4_98/: CMakeLists.txt  MyEvent.h  RingBuffer.hpp  Sender.cpp
Laba4_98/tests/: test_ringbuffer.cpp
Laba5/: CMakeLists.txt  Clients.cpp  CriticalSectionGuard.h  Employee.h  FileController.cpp  FileController.h  MessageProtocol.cpp  MessageProtocol.h  RecordLock.cpp  RecordLock.h  Server.cpp  ServerController.cpp  ServerController.h
